--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodes-app-backend",
+  "name": "bookshelf-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start": "node src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
