--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src"
   },
   "keywords": [],
-  "author": "",
+  "author": "Christofel Vitranata Simamora",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.1.1",
